<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_main_bottom_margin"
    android:paddingLeft="@dimen/activity_main_horizontal_margin"
    android:paddingRight="@dimen/activity_main_horizontal_margin"
    android:paddingTop="@dimen/activity_main_top_margin"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context="by.bstu.fit.oleggutsev.lab8_9android.MainActivity">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.631">

        <ImageView
            android:id="@+id/LogoApplication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logotype"/>

        <TextView
            android:id="@+id/NameApplication"
            style="@style/textView_style"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/login_bottom_margin"
            android:text="@string/app_name"
            android:textSize="@dimen/login_textSize"/>

        <EditText
            android:id="@+id/Email"
            style="@style/edditText_style"
            android:drawableLeft="@drawable/account"
            android:hint="@string/login"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/Password"
            style="@style/edditText_style"
            android:drawableLeft="@drawable/lock"
            android:hint="@string/main_password"
            android:inputType="textPassword"/>

            <Button
                android:id="@+id/input_button"
                style="@style/button_style"
                android:text="@string/sign_in"
                android:onClick="Enter_onClick"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                style="@style/textView_style"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="5dp"
                android:text="@string/not_an_account"/>

            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@android:color/transparent"
                android:gravity="top"
                android:onClick="Registration_onClick"
                android:text="@string/have_not_an_account"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
