<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_register_bottom_margin"
    android:paddingLeft="@dimen/activity_register_horizontal_margin"
    android:paddingRight="@dimen/activity_register_horizontal_margin"
    android:paddingTop="@dimen/activity_register_top_margin"
    tools:context="by.bstu.fit.oleggutsev.lab8_9android.MainActivity">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.822">

        <ImageView
            android:id="@+id/LogoApplication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logotype"/>

        <TextView
            android:id="@+id/NameApplication"
            style="@style/textView_style"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/login_bottom_margin"
            android:text="Lab8-9Android"
            android:textSize="@dimen/login_textSize"/>

        <EditText
            android:id="@+id/Email"
            style="@style/edditText_style"
            android:drawableLeft="@drawable/account"
            android:hint="@string/login"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/Password"
            style="@style/edditText_style"
            android:drawableLeft="@drawable/lock"
            android:hint="@string/password"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/RepeatPassword"
            style="@style/edditText_style"
            android:drawableLeft="@drawable/lock"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/buttonRegister"
            style="@style/button_style"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:onClick="onClick"
            android:text="@string/register"/>

        <Button
            android:id="@+id/buttonInput"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:onClick="onClick"
            android:text="@string/have_an_account"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="14dp"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
